--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-REACT_APP_BASE_URL=http://0.0.0.0:8000/api/v1
+REACT_APP_BASE_URL=http://ec2-18-141-218-77.ap-southeast-1.compute.amazonaws.com:8000/api/v1
+
