--- a/nginx.conf
+++ b/nginx.conf
@@ -18,7 +18,7 @@ server {
 
     # CORS Headers for API
     location /api/ {
-        proxy_pass http://backend_service_ip:backend_port;  # Your FastAPI backend URL
+        proxy_pass http://ec2-18-141-218-77.ap-southeast-1.compute.amazonaws.com:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
