--- a/nginx.conf
+++ b/nginx.conf
@@ -1,6 +1,6 @@
 server {
     listen 80;
-    server_name ec2-54-255-151-139.ap-southeast-1.compute.amazonaws.com;
+    server_name localhost;
 
     # Root directory for your React app build files
     root /var/www/html;  # Update this path to the location of your React build files
@@ -14,19 +14,5 @@ server {
     # Serve static files
     location / {
         try_files $uri /index.html;  # Serve index.html for any unmatched requests (for React Router)
-    }
-
-    # CORS Headers for API
-    location /api/ {
-        proxy_pass http://ec2-54-255-151-139.ap-southeast-1.compute.amazonaws.com:8000;
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-
-        # Add CORS headers for your backend requests
-        add_header 'Access-Control-Allow-Origin' '*';
-        add_header 'Access-Control-Allow-Methods' 'GET, POST, OPTIONS, DELETE, PUT';
-        add_header 'Access-Control-Allow-Headers' 'Origin, Authorization, Content-Type, Accept';
     }
 }
