--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   backend:
     build:
-      context: ../backend
+      context: ./personal-library-be
       dockerfile: Dockerfile
     ports:
       - "8000:8000"
@@ -10,7 +10,7 @@ services:
 
   frontend:
     build:
-      context: .
+      context: ./personal-library-fe
       dockerfile: Dockerfile
     ports:
       - "80:80"
